update: Removed the String##formatted method and supported older versions of the JDK